--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,6 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.1.0' //Закругливает картинки
     implementation 'com.squareup.picasso:picasso:2.5.2' //Скачивает картинки из интернета
+
+    implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
 }
