--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,18 +6,22 @@
 
     <application
         android:allowBackup="true"
+        android:name=".TwitterApp"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Colibri_Lessons">
-        <activity android:name=".activity.UserInfoActivity">
+        <activity android:name=".activity.AuthActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".activity.SearchUsersActivity"/>
+        <activity android:name=".activity.UserInfoActivity"/>
     </application>
 
 </manifest>
